DD4J-1361 Update imports and syntax for JUnit 5